--- a/the-Impossible-remake/styles.css
+++ b/the-Impossible-remake/styles.css
@@ -11,6 +11,9 @@ body {
 	-webkit-animation: AnimationName 14s ease infinite;
 	-moz-animation: AnimationName 14s ease infinite;
 	animation: AnimationName 14s ease infinite;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 
 @-webkit-keyframes AnimationName {
